[gd_scene load_steps=4 format=3 uid="uid://bayv5pk2qjc53"]

[ext_resource type="Script" path="res://prog122i.gd" id="1_c772f"]

[sub_resource type="Theme" id="Theme_lpwm2"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_13r5b"]
default_font_size = 32

[node name="prog122i" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c772f")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 20.0
offset_right = 1134.0
offset_bottom = 518.0
theme = SubResource("Theme_lpwm2")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 542.0
offset_right = 212.0
offset_bottom = 623.0
theme = SubResource("Theme_13r5b")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 542.0
offset_right = 648.0
offset_bottom = 623.0
theme = SubResource("Theme_13r5b")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 935.0
offset_top = 542.0
offset_right = 1114.0
offset_bottom = 623.0
theme = SubResource("Theme_13r5b")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
